fixed the title spacing on project page

--- a/public/assets/css/SASS/style.scss
+++ b/public/assets/css/SASS/style.scss
@@ -985,7 +985,6 @@ ul.projects li {
 
 .cardApplicants {
     height: 283px;
-    background-size: 100% auto;
     .cardScrim {height: 283px;}
     .cardInfo {top: 78%;}
 }
